--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,5 @@ org.gradle.jvmargs=-Xmx4G
 
 # Mod Properties
 	mod_version = 1.0.0
+	maven_group = one.devos.nautical
 	archives_base_name = teabridge
