--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Get short SHA
+        id: short_sha
+        run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
@@ -33,5 +37,5 @@ jobs:
       - name: capture build artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: Artifacts
+          name: Artifact-${{steps.short_sha.outputs.sha8}}
           path: build/libs/
