--- a/build.gradle
+++ b/build.gradle
@@ -25,14 +25,14 @@ dependencies {
 	modImplementation(fabricApi.module("fabric-command-api-v2", project.fabric_version))
 	modImplementation(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
 
-	include(implementation("net.dv8tion:JDA:5.0.0-alpha.18"){
-		exclude module: 'opus-java'
+	include(implementation("net.dv8tion:JDA:5.0.0-beta.2"){
+		exclude module: "opus-java"
 	})
 	include("net.sf.trove4j:trove4j:3.0.3")
 	include("org.apache.commons:commons-collections4:4.4")
-	include("com.fasterxml.jackson.core:jackson-core:2.13.2")
-	include("com.fasterxml.jackson.core:jackson-databind:2.13.2")
-	include("com.fasterxml.jackson.core:jackson-annotations:2.13.2")
+	include("com.fasterxml.jackson.core:jackson-core:2.14.1")
+	include("com.fasterxml.jackson.core:jackson-databind:2.14.1")
+	include("com.fasterxml.jackson.core:jackson-annotations:2.14.1")
 	include("com.squareup.okhttp3:okhttp:4.9.3")
 	include("com.squareup.okio:okio-jvm:3.2.0")
 	include("com.neovisionaries:nv-websocket-client:2.14")
