--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
 	id "fabric-loom" version "1.0-SNAPSHOT"
-	id 'maven-publish'
+	id "maven-publish"
 	id "io.github.juuxel.loom-quiltflower" version "1.+"
-	id 'org.ajoberstar.grgit' version '4.1.0'
+	id "org.ajoberstar.grgit" version '4.1.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
