⚙️ Refactor crash handling to be less error prone, json utils, refactor self webhook message sending

--- a/build.gradle
+++ b/build.gradle
@@ -49,12 +49,12 @@ processResources {
 	}
 }
 
-tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
-}
-
 java {
 	withSourcesJar()
+}
+
+tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
 }
 
 jar {
