🏗️ Preparation for platforms, include Placeholder API

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
 		url = "https://m2.dv8tion.net/releases/"
 		content { includeGroup "net.dv8tion" }
 	}
+	maven {
+		url = "https://maven.nucleoid.xyz/"
+		content { includeGroup "eu.pb4" }
+	}
 }
 
 dependencies {
@@ -27,6 +31,8 @@ dependencies {
 	modImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
 	modImplementation(fabricApi.module("fabric-command-api-v2", project.fabric_version))
 	modImplementation(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
+
+	modImplementation(include("eu.pb4:placeholder-api:2.0.0-pre.1+1.19.2"))
 
 	include(implementation("net.dv8tion:JDA:5.0.0-beta.2"){
 		exclude module: "opus-java"
@@ -45,7 +51,8 @@ processResources {
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand "version": project.version,
+				"mcversion": project.minecraft_version
 	}
 }
 
@@ -55,6 +62,11 @@ java {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
+}
+
+tasks.withType(AbstractArchiveTask) {
+	preserveFileTimestamps = false
+	reproducibleFileOrder = true
 }
 
 jar {
