--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,11 @@ task buildOrPublish {
 
 publishing {
 	publications {
-		mavenJava(MavenPublication) {
-			version "${project.mod_version}"
+		maven(MavenPublication) {
+			groupId = project.maven_group
+			artifactId = project.archives_base_name
+			version = "${project.mod_version}-rev.${grgit.head().abbreviatedId}"
+
 			from components.java
 		}
 	}
