--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 		url = "https://maven.nucleoid.xyz/"
 		content { includeGroup "eu.pb4" }
 	}
+	maven {
+		url = "https://maven.proxyfox.dev/"
+		content { includeGroup "dev.proxyfox" }
+	}
 }
 
 dependencies {
@@ -31,10 +35,11 @@ dependencies {
 	modImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
 	modImplementation(fabricApi.module("fabric-command-api-v2", project.fabric_version))
 	modImplementation(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
+	modImplementation(fabricApi.module("fabric-message-api-v1", project.fabric_version))
 
-	modImplementation(include("eu.pb4:placeholder-api:2.0.0-pre.1+1.19.2"))
+	include(implementation("dev.proxyfox:MarKt:1.4"))
 
-	include(implementation("net.dv8tion:JDA:5.0.0-beta.2"){
+	include(implementation("net.dv8tion:JDA:5.0.0-beta.12"){
 		exclude module: "opus-java"
 	})
 	include("net.sf.trove4j:trove4j:3.0.3")
@@ -45,7 +50,7 @@ dependencies {
 	include("com.squareup.okhttp3:okhttp:4.9.3")
 	include("com.squareup.okio:okio-jvm:3.2.0")
 	include("com.neovisionaries:nv-websocket-client:2.14")
-	// for "squareup.x" libs (they all use kotlin)
+	// for "squareup.x" libs (they all use kotlin) and MarKt
 	modLocalRuntime("net.fabricmc:fabric-language-kotlin:1.9.1+kotlin.1.8.10")
 }
 
