--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,15 @@ dependencies {
 	include(implementation("net.dv8tion:JDA:5.0.0-beta.24"){
 		exclude module: "opus-java"
 	})
+	include("net.sf.trove4j:trove4j:3.1.0")
+	include("org.apache.commons:commons-collections4:4.4")
+	include("com.fasterxml.jackson.core:jackson-core:2.17.0")
+	include("com.fasterxml.jackson.core:jackson-databind:2.17.0")
+	include("com.fasterxml.jackson.core:jackson-annotations:2.17.0")
+	include("com.squareup.okhttp3:okhttp:4.12.0")
+	include("com.squareup.okio:okio-jvm:3.2.0")
+	include("com.neovisionaries:nv-websocket-client:2.14")
+	// for "squareup" libs (they all use kotlin)
 	modLocalRuntime("net.fabricmc:fabric-language-kotlin:1.10.20+kotlin.1.9.24")
 }
 
