--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	include(implementation("net.dv8tion:JDA:5.0.0-beta.24"){
 		exclude module: "opus-java"
 	})
-	include("net.sf.trove4j:trove4j:3.1.0")
+	include("net.sf.trove4j:trove4j:core:3.1.0")
 	include("org.apache.commons:commons-collections4:4.4")
 	include("com.fasterxml.jackson.core:jackson-core:2.17.0")
 	include("com.fasterxml.jackson.core:jackson-databind:2.17.0")
