--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ version = "${project.mod_version}-mc${project.minecraft_version}-rev.${grgit.hea
 group = project.maven_group
 
 repositories {
+	mavenLocal()
+	mavenCentral()
 	maven {
 		url = "https://m2.dv8tion.net/releases/"
 		content { includeGroup "net.dv8tion" }
@@ -31,7 +33,7 @@ dependencies {
 	include(implementation("net.dv8tion:JDA:5.0.0-beta.24"){
 		exclude module: "opus-java"
 	})
-	include("net.sf.trove4j:trove4j:core:3.1.0")
+	include("net.sf.trove4j:core:3.1.0")
 	include("org.apache.commons:commons-collections4:4.4")
 	include("com.fasterxml.jackson.core:jackson-core:2.17.0")
 	include("com.fasterxml.jackson.core:jackson-databind:2.17.0")
