--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ processResources {
 
 	filesMatching("fabric.mod.json") {
 		expand "version": project.version,
-				"mcversion": project.minecraft_version
+				"mcversion": "1.21-beta.3"
 	}
 }
 
