--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20.6
-	loader_version=0.15.10
-	fabric_version=0.97.8+1.20.6
+	minecraft_version=1.21-rc1
+	loader_version=0.15.11
+	fabric_version=0.100.0+1.21
 
 # Mod Properties
-	mod_version = 1.2.3
+	mod_version = 1.3.0
 	maven_group = one.devos.nautical
 	archives_base_name = teabridge
