--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.21-rc1
+	minecraft_version=1.21
 	loader_version=0.15.11
-	fabric_version=0.100.0+1.21
+	fabric_version=0.100.1+1.21
 
 # Mod Properties
 	mod_version = 1.3.0
