--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,4 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.21
-	loader_version=0.15.11
-	fabric_version=0.100.1+1.21
-
-# Mod Properties
-	mod_version = 1.3.0
-	maven_group = one.devos.nautical
-	archives_base_name = teabridge
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
