--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,60 @@
-name: Gradle build
-
+name: build
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      type:
+        type: choice
+        description: Type of build
+        required: true
+        options:
+          - normal
+          - snapshot
+          - release
+        default: normal
 
 jobs:
   build:
-
+    strategy:
+      matrix:
+        java: [ 21 ]
     runs-on: ubuntu-latest
-
-    env:
-      PUBLISH_SUFFIX: snapshots
-      MAVEN_USER: ${{ secrets.MAVEN_USER }}
-      MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Get short SHA
-        id: short_sha
-        run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-7)"
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v1
+      - name: Setup Java ${{ matrix.java }}
+        uses: actions/setup-java@v4
         with:
-          java-version: 21
+          distribution: 'temurin'
+          java-version: ${{ matrix.java }}
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
-      - name: Build with Gradle
-        run: ./gradlew buildOrPublish
+      - name: Make Gradle Wrapper Executable
+        run: chmod +x ./gradlew
+
+      - name: Build
+        run: ./gradlew build
+
+      - name: Publish Snapshot
+        if: ${{ github.event.inputs.type == 'snapshot' }}
+        run: >-
+          ./gradlew publishAllPublicationsToDevOsSnapshotsRepository
+          -PdevOsSnapshotsUsername="${{ secrets.MAVEN_USER }}"
+          -PdevOsSnapshotsPassword="${{ secrets.MAVEN_PASS }}"
+
+      - name: Publish Release
+        if: ${{ github.event.inputs.type == 'release' }}
+        run: >-
+          ./gradlew publishAllPublicationsToDevOsReleasesRepository
+          -PdevOsReleasesUsername="${{ secrets.MAVEN_USER }}"
+          -PdevOsReleasesPassword="${{ secrets.MAVEN_PASS }}"
 
       - name: capture build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: Artifact-${{steps.short_sha.outputs.sha8}}
+          name: Artifacts
           path: build/libs/
